--- a/login.css
+++ b/login.css
@@ -38,7 +38,6 @@ main {
 
 .caja__trasera {
     width: 100%;
-    height: 500px;
     padding: 10px 20px;
     display: flex;
     justify-content: center;
@@ -75,11 +74,11 @@ main {
 }
 
 .caja__trasera button:hover {
-    background-color: #fff;
+    background: #fff;
     color: #46a2fd;
 }
 
-.contenedor__login-register {
+.contenedor_login-register {
     display: flex;
     align-items: center;
     width: 100%;
@@ -89,7 +88,7 @@ main {
     left: 10px;
 }
 
-.contenedor__login-register form {
+.contenedor_login-register form {
     width: 100%;
     padding: 80px 20px;
     background: #fff;
@@ -97,14 +96,14 @@ main {
     border-radius: 20px;
 }
 
-.contenedor__login-register form h2 {
+.contenedor_login-register form h2 {
     font-size: 30px;
     text-align: center;
     margin-bottom: 20px;
     color: #46a2fd;
 }
 
-.contenedor__login-register form input {
+.contenedor_login-register form input {
     width: 100%;
     margin-top: 20px;
     padding: 10px;
@@ -114,7 +113,7 @@ main {
     outline: none;
 }
 
-.contenedor__login-register form button {
+.contenedor_login-register form button {
     padding: 10px 40px;
     margin-top: 40px;
     border: none;
@@ -123,4 +122,37 @@ main {
     color: white;
     cursor: pointer;
     outline: none;
+}
+
+.formulario__login {
+    opacity: 1;
+    display: block;
+}
+
+.formulario__register {
+    display: none;
+}
+
+@media screen and(max-width:850px) {
+    main {
+        margin-top: 50px;
+    }
+    .caja__trasera {
+        max-width: 350px;
+        height: 300px;
+        flex-direction: column;
+        margin: auto;
+    }
+    .caja__trasera div {
+        margin: 0px;
+        position: absolute;
+    }
+    .contenedor__login-register {
+        top: -10px;
+        left: -5px;
+        margin: auto;
+    }
+    .contenedor__login-register form {
+        position: relative;
+    }
 }
